...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:theme="@style/toolbar_style"
                app:layout_constraintEnd_toEndOf="parent"
...
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:navGraph="@navigation/navigation" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/drawerNavView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            android:theme="@style/menu_style"
            app:menu="@menu/menu" />
...
