...
            app:layout_constraintEnd_toEndOf="@+id/main_image"
            app:layout_constraintStart_toStartOf="@+id/main_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="早餐"/>

        <TextView
            android:id="@+id/food_list"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="16dp"
            android:alpha="0.7"
...
