<resources>
    <string name="app_name">吃貨日記</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_application_id">307121663756980</string>
    <string name="facebook_app_id">307121663756980</string>
    <string name="login_token_id">693996800991-6cup7r536d3h29256avpebd9m8j9gcb8.apps.googleusercontent.com</string>

    <!-- home -->
...
    <string name="menu_home">主頁面</string>
    <string name="user_name">user name</string>

    <!-- add diary -->
    <string name="food_name">餐點名稱</string>
    <string name="combo_name">套餐內容</string>
    <string name="food_info">餐點資訊</string>
    <string name="experience_title">用餐心得</string>
    <string name="confirm">確認</string>
    <string name="store_info">店家資訊</string>
    <string name="store_name">店家名稱</string>
    <string name="store_phone">連絡電話</string>
    <string name="store_location">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址</string>
...
