...
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp"
        android:background="@drawable/corners_detail_background"
        tools:context=".adding.AddDiaryFragment">

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@+id/confirm_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
...
                    android:layout_marginTop="8dp"
                    android:alpha="0.12"
                    android:background="@color/black_sumi"
                    app:layout_constraintTop_toBottomOf="@+id/add_diary_recycler" />

                <TextView
                    android:id="@+id/food_info"
                    style="@style/text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="@{() -> viewModel.setFoodVisible()}"
                    android:text="@string/food_info"
...
                    android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/food_info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/food_info" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/food_title"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textColorHint="@color/aonibi"
                    android:visibility="@{viewModel.foodStatus == false ? View.GONE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/food_info"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/food_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/food_name"
                        android:inputType="text"
                        android:text="@={viewModel.diary.food.foodName}"
                        android:textSize="16dp" />
...
