...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_fbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:src="@drawable/ic_add_black_24dp"
...
            app:layout_constraintEnd_toStartOf="@+id/template"
            app:layout_constraintTop_toTopOf="@+id/template"
            app:layout_constraintBottom_toBottomOf="@+id/template"
            tools:visibility="visible"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:fabSize="mini"
            android:src="@drawable/icons8_bento_50"
            android:theme="@style/button_style"
...
